[tool.poetry]
name = "rasa-prod"
version = "0.1.0"
description = ""
authors = ["Karthik_D <karthikdeshpandeabd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"









[[tool.poetry.source]]
name = "rasa-pro"
url = "https://europe-west3-python.pkg.dev/rasa-releases/rasa-pro-python/simple"
priority = "supplemental"
